Fixing styles for slideshow bullets on Safari and creating component for button styles

--- a/_sass/homepage/_events.scss
+++ b/_sass/homepage/_events.scss
@@ -30,6 +30,11 @@
       padding-bottom: 40px;
       transition: 200ms ease-in-out;
 
+      &.active {
+        display: flex;
+        transition: 200ms ease-in-out;
+      }
+
       &__image {
         background-image: url('/assets/images/trails.jpg');
         background-position: center;
@@ -68,20 +73,11 @@
 
       &__cta {
         display: flex;
-        position: relative;
 
         &__calendar {
           display: flex;
-        }
-
-        &__link {
-          position: relative;
-          color: $yellow;
-          padding-left: 10px;
-        }
 
           svg {
-
             width: 28px;
             height: 28px;
 
@@ -89,21 +85,22 @@
               stroke-width: 22;
             }
           }
+        }
+
+        &__button {
+          position: relative;
+          color: $yellow;
 
           &:after {
-          content: '';
-          position: absolute;
-          bottom: 3px;
-          left: 37px;
-          width: 141px;
-          height: 2px;
-          background: $yellow;
+            content: '';
+            position: absolute;
+            bottom: 2px;
+            left: 0;
+            width: 140px;
+            height: 2px;
+            background: $yellow;
+          }
         }
-      }
-
-      &.active {
-        display: flex;
-        transition: 200ms ease-in-out;
       }
     }
   }
@@ -156,7 +153,7 @@
   transition: 200ms ease-in-out;
 
   &.active {
-  display: block;
-  transition: 200ms ease-in-out;
+    display: block;
+    transition: 200ms ease-in-out;
   }
 }
