--- a/_sass/homepage/_popup.scss
+++ b/_sass/homepage/_popup.scss
@@ -111,24 +111,11 @@
       height: 22px;
     }
 
-    &__cta {
-      cursor: pointer;
-      position: relative;
-      border: none;
+    &__button {
       color: $green;
-      padding: 0;
-      font-size: 1rem;
-      line-height: 1rem;
-      background: none;
-      font-weight: 600;
 
       &:after {
-        content: '';
-        position: absolute;
-        bottom: 3px;
-        left: 1px;
         width: 90px;
-        height: 2px;
         background: $green;
       }
     }
