--- a/_sass/homepage/_siteseeing.scss
+++ b/_sass/homepage/_siteseeing.scss
@@ -61,6 +61,7 @@
     text-shadow: none;
     padding: 6px;
     margin: 0 3px;
+    background: transparent;
 
     &--active {
       background-color: $green;
